--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,9 @@
     "extends": ["eslint:recommended", "plugin:react/recommended", "airbnb"],
     "rules": {
         "comma-dangle": 0,
-        "class-methods-use-this": 0
+        "class-methods-use-this": 0,
+        "react/prop-types": 0,
+        "react/jsx-one-expression-per-line": 0
     },
     "settings": {
         "react": {
